--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="p5.sound.min.js"></script>
     <script src="./p5.play.js"></script>
     <script src="matter.js"></script>
+    <script src="paper.js"></script>
+    <script src="Fixed.js"></script>
+    <script src="Dustbin.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
